# sfbrn-vpat-report-generator

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD_INSTRUCTIONS.md  CLAUDE.md  INSTALL_INSTRUCTIONS.txt  README.md  README_LOGO.txt  build_exe.bat  installer.iss  make_demo.py  prompt.txt  pyproject.toml  report_generator.py  requirements.txt  run_app.py  settings.json  settings_manager.py  test_v10_regression.py  vpat_parser.py  vpat_reviewer.spec  wcag_reference.py
docs/: architecture.md  challenge_overview.md  extending.md
docs/Regulations/: ICT Risk Scoring Example.docx  IT Accessibility Review Procedure.docx  VPAT-ACR Review In Depth Guide.docx
docs/completed_forms/: Beyond_Compare-ScooterSoftware-ACR(3-24-2020).doc
docs/model_eval/: MODEL_COMPARISON.md  MULTIDOC_COMPARISON.md  README.md  bench_results.json  multidoc_results.json
docs/model_eval/per_doc/: Atrium Connect.md  Canvas.md  Cornerstone.md  H5P.md  iCIMS.md
docs/model_eval/raw_outputs/: Claude_3_Haiku.txt  Claude_3_Sonnet.txt  Claude_Haiku_4.5.txt  Claude_Opus_4.1.txt  Claude_Opus_4.5.txt  Claude_Opus_4.6.txt  Claude_Opus_4.7.txt  Claude_Opus_4.8.txt  Claude_Sonnet_4.5.txt  Claude_Sonnet_4.6.txt  Claude_Sonnet_4.txt  Claude_Sonnet_5.txt  Command_R.txt  Command_R_.txt  DeepSeek_R1.txt  DeepSeek_V3.1.txt  DeepSeek_V3.2.txt  Devstral_2_123B.txt  GLM_4.7.txt  GLM_4.7_Flash.txt  GLM_5.txt  GPT_OSS_Safeguard_120b.txt  GPT_OSS_Safeguard_20b.txt  Gemma_3_12B.txt  Gemma_3_27B.txt  Gemma_3_4B.txt  Kimi_K2.5.txt  Kimi_K2_Thinking.txt  Llama_3.1_70B.txt  Llama_3.1_8B.txt  Llama_3.3_70B.txt  Llama_3_70B.txt  Llama_3_8B.txt  Llama_4_Maverick.txt  Llama_4_Scout.txt  Magistral_Small.txt  MiniMax_M2.1.txt  MiniMax_M2.5.txt  MiniMax_M2.txt  Ministral_14B_3.0.txt  (+27 more)
rebuild/: INSTALL_INSTRUCTIONS.txt  README.md  build_exe.bat  installer.iss  pyproject.toml  report_generator.py  requirements.txt  run_app.py  test_v10_regression.py  vpat_parser.py  wcag_reference.py
rebuild/.github/workflows/: ci.yml
rebuild/src/vpat_reviewer/: __init__.py  cli.py  diagnostics.py
rebuild/src/vpat_reviewer/domain/: impact.py
rebuild/src/vpat_reviewer/extraction/: __init__.py  pdf.py  registry.py
rebuild/src/vpat_reviewer/parsing/: dates.py  metadata.py  section508.py
rebuild/src/vpat_reviewer/reference/: __init__.py  loader.py
rebuild/src/vpat_reviewer/reporting/: reportlab_renderer.py
rebuild/src/vpat_reviewer/ui/: __init__.py
rebuild/src/vpat_reviewer/ui/gui/: app.py
rebuild/tests/: test_cli.py  test_diagnostics.py  test_service.py
rebuild/tests/fixtures/: README.md
rebuild/tests/parsing/: test_dates.py  test_extraction.py  test_fixtures.py  test_metadata.py  test_section508.py
rebuild/tests/unit/: test_policy.py  test_policy_form.py
samples/: build_verdict_samples.py
samples/verdict_cases/: README.md  deny.expected.json  deny.txt  good_to_go.expected.json  good_to_go.txt  minor_issue.expected.json  minor_issue.txt  need_taap.expected.json  need_taap.txt  needs_manual_review.expected.json  needs_manual_review.txt
src/vpat_reviewer/: __init__.py  cli.py  diagnostics.py  service.py
src/vpat_reviewer/ai/: __init__.py  base.py  bedrock.py  prompt.py  response.py  review.py  stub.py
src/vpat_reviewer/audit/: __init__.py  base.py  csv_log.py
src/vpat_reviewer/config/: __init__.py  policy_form.py  settings.py
src/vpat_reviewer/domain/: __init__.py  models.py  normalization.py  policy.py  scoring.py  verdict.py
src/vpat_reviewer/extraction/: base.py  docx.py  pdf.py  registry.py  txt.py
src/vpat_reviewer/parsing/: __init__.py  criteria.py  doctype.py  document.py  metadata.py  section508.py  (+2 more)
tests/: conftest.py  test_cli.py  test_cli_editing.py  test_regression.py  test_service.py  test_service_assessment.py  test_service_json.py  test_verdict_samples.py
tests/ai/: test_bedrock.py  test_prompt.py  test_response.py  test_response_edges.py  test_stub.py
tests/audit/: test_build_event.py  test_csv_log.py
tests/fixtures/: README.md
tests/parsing/: test_criteria.py  test_dates_edges.py  test_doctype.py  test_document.py  test_docx_roundtrip.py  test_extraction.py  test_pdf_extraction.py  test_section508.py  test_standards.py  test_text_cleanup.py
tests/reporting/: test_onepage.py  test_reportlab_renderer.py
tests/unit/: test_impact.py  test_normalization.py  test_normalization_edges.py  test_policy_edges.py  test_policy_form_bulk.py  test_reference.py  test_scoring.py  test_settings.py  test_verdict.py
tools/: corpus_baseline.json  corpus_report.py  demo_matrix_report.py  model_selection_report.py
(+15 files in other folders)
