[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vpat-reviewer"
version = "11.0.0"
description = "Reads a vendor VPAT (PDF/DOCX/TXT) and produces a branded WCAG accessibility compliance report. Offline, single-machine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "SFBRN" }]
dependencies = [
    "reportlab>=4.0",   # PDF report generation
    "pdfplumber>=0.10", # PDF VPAT text/table extraction
    "python-docx>=1.1", # DOCX VPAT extraction
    "pypdf>=4.0",       # post-generation PDF validation
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]
build = [
    "pyinstaller>=6.0", # single-exe packaging (Phase 8)
]

[project.scripts]
vpat-review = "vpat_reviewer.cli:main"
vpat-review-gui = "vpat_reviewer.ui.gui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vpat_reviewer"]

# ── Tooling ──────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
# run_app.py is a thin launcher / PyInstaller entry point; kept out of linting.
extend-exclude = [
    "run_app.py",
    # The relocated ReportLab layout engine is legacy-style; isolated behind the
    # reporting port and scheduled for incremental cleanup. Not linted yet.
    "src/vpat_reviewer/reporting/reportlab_renderer.py",
    # The Tkinter GUI is a legacy-style adapter; manually verified, not linted yet.
    "src/vpat_reviewer/ui/",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
# Strict typing applies to the new package only during migration.
files = ["src/vpat_reviewer"]
warn_unused_ignores = true

# Third-party libraries without type stubs.
[[tool.mypy.overrides]]
module = ["pdfplumber.*", "docx.*", "reportlab.*", "pypdf.*"]
ignore_missing_imports = true

# Relocated legacy ReportLab engine — untyped, isolated behind the reporting port.
[[tool.mypy.overrides]]
module = ["vpat_reviewer.reporting.reportlab_renderer"]
ignore_errors = true

# Tkinter GUI adapter — legacy-style, manually verified.
[[tool.mypy.overrides]]
module = ["vpat_reviewer.ui.*"]
ignore_errors = true

[tool.pytest.ini_options]
# src => the new package; "." => legacy flat modules still under strangler.
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"
